CHANGES IN VERSION 1.1.8
-----------------------

NEW FEATURES

    o Add a new auxiliary function 'xAuxSI'
    

CHANGES IN VERSION 1.1.7
-----------------------

NEW FEATURES

    o Populate annotations

    o Fix bugs
    
    o Modify the function 'xSubneterGenes' with threshold output

    o Add functions ('xSubneterGenesAdv' and 'xSubneterGenesMST') supporting multiple subnetwork identifications

    o Modify the functions ('xSubneterGR' and 'xSubneterSNP') enabling multiple subnetwork identifications
    
    o Modify the function 'xLayout' with new layouts (dephi and graphlayouts)
    
    o Modify the function 'xRDataLoader' supporting built-in datasets hosted at OSF
    
    o Add a function ('xMarkNet') supporting network marking
    

CHANGES IN VERSION 1.1.6
-----------------------

NEW FEATURES

    o Fix bugs
    
    o Simplify functionalities
    

CHANGES IN VERSION 1.1.5
-----------------------

NEW FEATURES

    o Populate annotations
    
    o Add functions ('xEnrichRadial', 'xEnrichDotplot', 'xEnrichChord', 'xEnrichD3', 'xEnrichCtree', 'xCtree', 'xEnrichGGraph', 'xGGraph') for radial-, dot-, chord-, D3 and tree-style plot of enrichment results

    o Add functions ('xWCN' and 'xWCNheatmap') for weighted correlation network analysis
    
    o Add a new function 'xLayout' for adding graph node coordinates into a graph

    o Add a new function 'xObjSize' for estimating the memory allocation

    o Modify functions ('xSymbol2GeneID', 'xGeneID2Symbol', 'xDefineOntology', 'xEnricherGenes') enabling organism-specific customised analysis
    
    o Add functions ('xGraphRWR', 'xGraphSim', 'xGraphPerf') for analysing graph node similarity
    
    o Add functions ('xGraphML2AA') for pathway analysis

    o Add functions ('xPieplot') for pie plot
    
    o Add functions ('xAge') for Phylostratigraphy analysis

    o Unify auxiliary functions ('xAuxFunArgs', 'xAuxRd2HTML', 'xAuxRdWrap' and 'xAuxEmbed')
