@@ -79,6 +79,7 @@ export(xGraphML)
 export(xGraphML2AA)
 export(xHeatmap)
 export(xHeatmapAdv)
+export(xIG2TBL)
 export(xLayout)
 export(xLiftOver)
 export(xMEabf)
@@ -112,6 +113,7 @@ export(xSubneterGenesAdv)
 export(xSubneterGenesMST)
 export(xSubneterSNPs)
 export(xSymbol2GeneID)
+export(xTBL2IG)
 export(xVisKernels)
 export(xVisNet)
 import(Matrix)
@@ -149,16 +151,19 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,arrange_all)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,desc)
+importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,semi_join)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
+importFrom(dplyr,transmute)
 importFrom(ggnetwork,geom_edges)
 importFrom(ggnetwork,geom_nodes)
 importFrom(ggnetwork,ggnetwork)
@@ -209,5 +214,6 @@ importFrom(stats,wilcox.test)
 importFrom(supraHex,visColormap)
 importFrom(supraHex,visHeatmapAdv)
 importFrom(supraHex,visTreeBootstrap)
+importFrom(tibble,as_tibble)
 importFrom(tibble,enframe)
 importFrom(tibble,tibble)
