@@ -22,8 +22,8 @@
 #' @importFrom supraHex visColormap visTreeBootstrap visHeatmapAdv
 #' @importFrom stats sd median mad ecdf na.omit predict prcomp lm quantile as.dist hclust cor as.dendrogram order.dendrogram wilcox.test coef p.adjust dist
 #' @importFrom BiocGenerics unlist start end
-#' @importFrom tibble tibble enframe 
-#' @importFrom dplyr select filter arrange mutate group_by summarise desc n arrange_all slice left_join pull bind_rows semi_join
+#' @importFrom tibble tibble enframe as_tibble
+#' @importFrom dplyr select filter arrange mutate group_by summarise desc n arrange_all slice left_join pull bind_rows semi_join transmute distinct n_distinct
 #' @importFrom purrr map_chr
 #' @importFrom readr write_delim read_delim
 #' @importFrom ggnetwork ggnetwork geom_nodes geom_edges
